<resources>
    <string name="app_name">ZscalerSDK Demo</string>
    <string name="enter_zdk_id_base64">App Key Base64</string>
    <string name="export_logs">Export Logs</string>
    <string name="enter_access_token">Access Token</string>
    <string name="clear_logs">Clear Logs</string>
    <string name="enter_url">Enter URL</string>
    <string name="send">Go</string>
    <string name="config_zscaler">Zscaler Config</string>
    <string name="prelogin_tunnel">PreLogin Tunnel</string>
    <string name="zerotrust_tunnel">ZeroTrust Tunnel</string>
    <string name="event_logs">Event Logs</string>
    <string name="status_format">Status: %1$s</string>
    <string name="error_status_format">Status: Error %1$s</string>
    <string name="enter_valid_zdk_id">Enter valid App Key</string>
    <string name="zdk_id_is_empty">App key is empty</string>
    <string name="access_token_is_empty">Access token is empty</string>
    <string name="status_off">OFF</string>
    <string name="enter_valid_url">Enter valid URL</string>
    <string name="reloading_web_page">Reloading Web Page</string>
    <string name="zdk_log_cleared">Cleared ZscalerSDK logs</string>
    <string name="share_zdk_log_zip_file">Share ZscalerSDK log ZIP file</string>
    <string name="error_loading_data">Error loading data</string>
    <string name="saved_to_download">ZscalerSDK Log saved to download folder</string>
    <string name="not_enough_space">There is not enough disk space to export log files.</string>
    <string name="no_share_activity_present">There is no activity which can handle exporting of logs.</string>
    <string name="download_folder_not_found">Download folder not found</string>
    <string name="configuration_options">Configuration Options</string>
    <string name="save">Save</string>
    <string name="setting_title_urlsessions">URLSessions</string>
    <string name="setting_title_webviews">WebViews</string>
    <string name="setting_title_proxy_authentication">Proxy Authentication</string>
    <string name="setting_title_block_root_traffic">Block Root Traffic</string>
    <string name="setting_title_block_zpa_connection">Block ZPA Connection</string>
    <string name="setting_desc_urlsessions">Should automatically configure URLSessions</string>
    <string name="setting_desc_webviews">Should automatically configure WebViews</string>
    <string name="setting_desc_proxy_authentication">Use proxy authentication</string>
    <string name="setting_desc_block_root_traffic">Block traffic if device is rooted</string>
    <string name="setting_desc_block_zpa_connection">Block ZPA connection on tunnel failure</string>
    <string name="setting_title_enable_log">Enable log</string>
    <string name="setting_desc_enable_log">Enable Zscaler sdk log in console</string>
    <string name="log_level_debug">Debug</string>
    <string name="log_level_info">Info</string>
    <string name="log_level_error">Error</string>
    <string name="log_level_title">Log Level</string>
    
    <!-- Bottom Navigation Titles -->
    <string name="title_tunnel">Tunnel</string>
    <string name="title_requests">Request</string>
    <string name="title_logs">Logs</string>
    <string name="title_settings">Settings</string>
</resources>