<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_tunnel">

    <fragment
        android:id="@id/navigation_tunnel"
        android:name="com.zscaler.sdk.demoapp.tunnel.TunnelFragment"
        android:label="@string/title_tunnel"
        tools:layout="@layout/fragment_tunnel" />

    <fragment
        android:id="@id/navigation_requests"
        android:name="com.zscaler.sdk.demoapp.requests.RequestsFragment"
        android:label="@string/title_requests"
        tools:layout="@layout/fragment_requests" />

    <fragment
        android:id="@id/navigation_logs"
        android:name="com.zscaler.sdk.demoapp.logs.LogsFragment"
        android:label="@string/title_logs"
        tools:layout="@layout/fragment_logs" />

    <fragment
        android:id="@id/navigation_settings"
        android:name="com.zscaler.sdk.demoapp.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>