<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_parent_setting_radio"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/ll_parent_setting_radio_padding_start"
    android:paddingTop="@dimen/ll_parent_setting_radio_padding_top">

    <TextView
        android:id="@+id/tv_log_level_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_level_title"
        android:textSize="@dimen/setting_text_size"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/rg_log_level_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/rg_log_level_option_mrgin_top"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_log_level_debug"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/log_level_debug" />

        <RadioButton
            android:id="@+id/rb_log_level_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/log_level_info" />

        <RadioButton
            android:id="@+id/rb_log_level_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/log_level_error" />

    </RadioGroup>
</LinearLayout>