<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/zdk_id_Layout"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:hint="@string/enter_zdk_id_base64">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/zdk_id_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:lines="1"
                android:maxLines="1"
                android:text="@string/zscaler_id"
                android:textSize="12sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/export_logs_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_export_log"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:contentDescription="@string/export_logs"
                android:src="@drawable/ic_export_log" />

            <TextView
                android:id="@+id/tv_export_log"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/export_logs" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/access_token_layout"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:hint="@string/enter_access_token">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/access_token_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:lines="1"
                android:maxLines="1"
                android:text="@string/zscaler_access_token"
                android:textSize="12sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/clear_logs_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_clear_log"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:contentDescription="@string/clear_logs"
                android:src="@drawable/ic_clear_log" />

            <TextView
                android:id="@+id/tv_clear_log"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/clear_logs" />
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!-- Switch Pre Login -->
        <LinearLayout
            android:id="@+id/ll_pre_login_parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="12dp"
            android:gravity="center_vertical"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/ll_zscaler_config"
            android:orientation="horizontal">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/pre_login_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prelogin_tunnel" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_pre_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:visibility="invisible"
                tools:visibility="visible"
                tools:text="Status: Server down error"/>
        </LinearLayout>

        <!-- Switch Zero trust -->
        <LinearLayout
            android:id="@+id/ll_zero_trust_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="12dp"
            android:layout_below="@+id/ll_pre_login_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/zero_trust_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zerotrust_tunnel" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_zero_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_zscaler_config"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="2"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="12dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:contentDescription="@string/clear_logs"
                android:src="@drawable/ic_setting" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/config_zscaler" />
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/border"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/http_method_button"
            android:layout_width="@dimen/spinner_layout_width"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:background="#CCFFCC"
            android:entries="@array/methods"
            android:spinnerMode="dropdown" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/browser_url_text_field"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/enter_url"
            android:singleLine="true" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/go_button"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="1dp"
            android:background="#64b5f6"
            android:gravity="center"
            android:text="@string/send" />

    </LinearLayout>

    <WebView
        android:id="@+id/webview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_response"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>